# historybook

./: README.md  pyproject.toml
.github/workflows/: auto-release.yml  deploy.yml
docs/: CHANGELOG.md
src/historybook/: __init__.py  _version.py  app.py  discovery.py  registry.py
src/historybook/components/: __init__.py  pipeline_diagram.py
